yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conf-service
  namespace: qp
spec:
  type: ClusterIP
  selector:
    app: conf-service
  ports:
  - port: 80
    targetPort: 80
